First working version of the chrome extension

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,15 @@
-<script>console.log("popup clicked!");</script>
+<!DOCTYPE html>
+<html>
+
+<head>
+</head>
+
+<body>
+    <button id="myBtn">Clear</button>
+    <div id="links">
+    </div>
+
+    <script src="popup.js"></script>
+</body>
+
+</html>
